Fixed navbar overlap contact section header

--- a/src/styles/components/_contact.scss
+++ b/src/styles/components/_contact.scss
@@ -9,6 +9,10 @@
   text-transform: uppercase;
 }
 
+.contactSectionContainer__header--hidden {
+  visibility: hidden;
+}
+
 .containerSectionContainer__headerUnderline {
   background-color: #000;
   height: .1rem;
