--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -11,7 +11,7 @@
 body {
   font-family: 'Raleway', sans-serif;
   font-size: 1.6rem;
-  height: 100rem;
+  height: 1000rem;
   // background-color: springgreen;
   box-sizing: border-box;
   // text-align: center;
